--- a/whxmail.com/index.html
+++ b/whxmail.com/index.html
@@ -16,7 +16,7 @@
 
   </head>
   <body>
-    <img src="images/company-logo.png" alt="Company">  <body>
+    <img src="http://qiniu.syseye.org/smile.jpg" alt="smile">  <body>
     <h1 class="hello-world">Hello, world!</h1>
   </body>
 </html>
