--- a/whxmail.com/index.html
+++ b/whxmail.com/index.html
@@ -16,7 +16,7 @@
 
   </head>
   <body>
-    <img src="http://qiniu.syseye.org/imags/jpg/smile.jpg" alt="smile">
+    <img src="http://qiniu.syseye.org/imgs/jpg/smile.jpg" alt="smile">
     <h1 class="hello-world">Hello, world!</h1>
   </body>
 </html>
